# Visualization-of-clustering-algorithms-in-3D

./: CMakeLists.txt  README.md  geometry.h  lighting.cpp  lighting.h  main.cpp  main.h  math.h
data/: multivariate.csv  multivariated.csv
src/: Cloud.cpp  Cloud.h  Clustering.cpp  Clustering.h  PCA.cpp  PCA.h  RGM.cpp  RGM.h  kmean.cpp  kmean.h  main.h  math.cpp  math.h  parser.hh  tools.cpp  tools.h
